svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-traakr
  labels:
    run: web-traakr
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    run: web-traakr
