ing.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress  
metadata:  
  name: hello
spec:
  defaultBackend:
    service:
      name: web-traackr
      port:
        number: 80

  rules:
  - host: hello-world.local
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: web-traackr 
            port:
              number: 80
